@@ -1,7 +1,8 @@
 package com.ebanking.security;
 
 import java.util.Arrays;
-import java.util.List;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -10,6 +11,8 @@ import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.oauth2.jwt.JwtDecoder;
+import org.springframework.security.oauth2.jwt.NimbusJwtDecoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
@@ -22,8 +25,17 @@ public class SecurityConfig {
 
   private final JwtAuthConverter jwtAuthConverter;
 
+  @Value("${spring.security.oauth2.resourceserver.jwt.jwk-set-uri}")
+  private String jwkSetUri;
+
   public SecurityConfig(JwtAuthConverter jwtAuthConverter) {
     this.jwtAuthConverter = jwtAuthConverter;
+  }
+
+  @Bean
+  @ConditionalOnProperty(name = "spring.security.oauth2.resourceserver.jwt.jwk-set-uri")
+  public JwtDecoder jwtDecoder() {
+    return NimbusJwtDecoder.withJwkSetUri(jwkSetUri).build();
   }
 
   @Bean
@@ -52,18 +64,40 @@ public class SecurityConfig {
 
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
+
     CorsConfiguration configuration = new CorsConfiguration();
-    // Allow all origins but in a way that works with credentials
-    configuration.setAllowedOriginPatterns(List.of("*"));
+
+    // Use patterns to allow any origin while still supporting allowCredentials(true)
+
+    // The actual filtering is managed by the Kubernetes Ingress
+
+    configuration.setAllowedOriginPatterns(Arrays.asList("*"));
+
     configuration.setAllowedMethods(
         Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+
     configuration.setAllowedHeaders(
-        Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin"));
+        Arrays.asList(
+            "Authorization",
+            "Content-Type",
+            "X-Requested-With",
+            "Accept",
+            "Origin",
+            "Access-Control-Request-Method",
+            "Access-Control-Request-Headers"));
+
     configuration.setAllowCredentials(true);
-    configuration.setExposedHeaders(List.of("Authorization"));
+
+    configuration.setExposedHeaders(
+        Arrays.asList(
+            "Authorization", "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
+
+    configuration.setMaxAge(3600L);
 
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+
     source.registerCorsConfiguration("/**", configuration);
+
     return source;
   }
 }
